--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -4,6 +4,7 @@ on: [push]
 
 env:
   python_package_name: converter-csv
+  folder_package_name: converter_csv
 
 jobs:
   build:
@@ -33,8 +34,8 @@ jobs:
         run: |
           ls
           ls dist
-          TOOL_CURRENT_VERSION=`sed -e 's/.*__version__ = "\(.*\)".*/\1/' ${{ env.python_package_name }}/_version.py`
-          pip install dist/${{ env.python_package_name }}-${TOOL_CURRENT_VERSION}-py3-none-any.whl
+          TOOL_CURRENT_VERSION=`sed -e 's/.*__version__ = "\(.*\)".*/\1/' ${{ env.folder_package_name }}/_version.py`
+          pip install dist/${{ env.folder_package_name }}-${TOOL_CURRENT_VERSION}-py3-none-any.whl
         shell: bash
       - name: pip show package
         run: |
