--- a/version.rc
+++ b/version.rc
@@ -15,11 +15,11 @@ VSVersionInfo(
       StringTable(
         u'040904B0',
         [StringStruct(u'CompanyName', u'LimberDuck'),
-        StringStruct(u'FileDescription', u'Converter CSV'),
+        StringStruct(u'FileDescription', u'Converter CSV by LimberDuck. Visit https://limberduck.org'),
         StringStruct(u'FileVersion', u'0.4.1.0'),
         StringStruct(u'InternalName', u'converter-csv'),
-        StringStruct(u'LegalCopyright', u'\xa9 Damian Krawczyk.'),
-        StringStruct(u'OriginalFilename', u'converter-csv.exe'),
+        StringStruct(u'LegalCopyright', u'\xa9 Damian Krawczyk'),
+        StringStruct(u'OriginalFilename', u'LimberDuck Converter CSV.exe'),
         StringStruct(u'ProductName', u'Converter CSV'),
         StringStruct(u'ProductVersion', u'0.4.1.0')])
       ]), 
