--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,8 @@ name: Upload Python Package
 
 on:
   release:
-    types: [published]
+    types: [created, published]
+  workflow_dispatch:
 
 jobs:
   deploy:
