--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,8 +9,10 @@
 name: Upload Python Package
 
 on:
-  release:
-    types: [created, published]
+  workflow_run:
+    workflows: ["Build and Release"]
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
