--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -130,7 +130,7 @@ jobs:
         run: |
           python -m venv venv
           ./venv/bin/python -m pip install --upgrade pip
-          ./venv/bin/python -m pip install pyinstaller
+          ./venv/bin/python -m pip install pyinstaller Pillow
           ./venv/bin/python -m pip install -r requirements.txt
 
       - name: Build
@@ -172,7 +172,7 @@ jobs:
         run: |
           python -m venv venv
           ./venv/bin/python -m pip install --upgrade pip
-          ./venv/bin/python -m pip install pyinstaller
+          ./venv/bin/python -m pip install pyinstaller Pillow
           ./venv/bin/python -m pip install -r requirements.txt
 
       - name: Build
